Fixed layout issue for sidebar share

--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -224,11 +224,11 @@
 		overflow:hidden;
 		padding-bottom:15px;
 		border-bottom:1px #d1d1d1 solid;
-			img {
+			#computer_small {
 				float:left;
 				margin:-5px 10px 0 -3px;
 			}
-			div {
+			.actions {
 				float: left;
 				width: 165px;
 				margin-top:6px;
